data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3861.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\60"
    "\03\7f\7c\7e\02\7e\7d\60\00\02\7e\7d\02\97\80\80"
    "\80\00\01\03\65\6e\76\0f\63\6f\6d\70\6c\65\78\46"
    "\75\6e\63\74\69\6f\6e\00\00\03\82\80\80\80\00\01"
    "\01\0a\9b\80\80\80\00\01\95\80\80\80\00\00\41\2a"
    "\44\1f\85\eb\51\b8\1e\09\40\42\d2\85\d8\cc\04\10"
    "\00\0b"
  )
""
)